Update author information to miroblog

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "job-queue-processor"
 version = "0.1.0"
 description = "Simple, extensible job queue processor with MongoDB backend"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"},
+    {name = "miroblog", email = "miroblog@snu.ac.kr"},
 ]
 readme = "README.md"
 license = {text = "MIT"}
